app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  /* Primary Colors */
  --color-primary: #003d9b;
  --color-primary-container: #0052cc;

  /* Surface Colors*/
  --color-surface-highest: #d7e2ff;
  --color-surface-low: #f1f3ff;

  --color-background: #f9f9ff;

  /* Semantic Colors*/
  --color-success: #82f9be;
  --color-error: #ba1a1a;
  --color-warning: #ffb300;

  /* Slate Neutrals Colors */
  --color-slate-dark: #041b3c;
  --color-slate-container: #4f5f7b;
  --color-slate-light: #c3c6d6;

  --color-placeholder: #737685;
  --color-ocean: #e8edff;

  --color-secondary: #434654;
  --color-input-error: #93000a;
  --color-input-error-light: #ffdad6;
  /* Typography */
  --font-sans: var(--font-inter);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

